# ros_trex_driver

./: CMakeLists.txt  LICENSE  README.md  config-edgearm.yaml  config-setup.yaml  default.launch  edgearm.launch  package.xml  setup.py
config/: config-edgearm.yaml  config-setup.yaml  config-test.yaml
launch/: default.launch  edgearm.launch
nodes/: trex_driver_node.py
scripts/: trex_driver.py
src/trex_driver/: trex_driver.py
